--- a/app/src/main/res/layout/favorite_fragment.xml
+++ b/app/src/main/res/layout/favorite_fragment.xml
@@ -27,7 +27,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="yêu thích"
+            android:text="Yêu thích"
             android:textSize="30sp"
             android:textStyle="bold|italic"
             android:layout_marginLeft="55dp"
