--- a/app/src/main/res/layout/activity_canhgheraumuong_moncanh.xml
+++ b/app/src/main/res/layout/activity_canhgheraumuong_moncanh.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="Canh ghẹ rau muống\n thanh mát, ngọt lành"
+            android:text="Canh ghẹ rau muống"
             android:textColor="@color/white"
             android:textSize="25dp"
             android:textStyle="bold|italic"
