--- a/app/src/main/res/layout/category_fragment.xml
+++ b/app/src/main/res/layout/category_fragment.xml
@@ -26,7 +26,7 @@
             android:ems="20"
             android:gravity="center"
             android:paddingRight="40dp"
-            android:text="Danh mục món ăn"
+            android:text="Danh mục"
             android:textColor="@color/white"
             android:textSize="23dp"
             android:textStyle="bold|italic" />
