--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -10,18 +10,29 @@
         android:layout_height="50dp"
         android:layout_margin="10dp"/>
 
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <TextView
         android:id="@+id/textviewTen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="64dp"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="5dp"
         android:layout_toRightOf="@id/imgviewhinh"
-        android:text="Chức năng"
+        android:text="Ten"
         android:textSize="20dp"
-        android:textStyle="bold|italic"/>
-
+        android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/textviewmsv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="64dp"
+            android:text="MSV"
+            android:textSize="20dp"
+            android:textStyle="bold|italic"/>
+    </LinearLayout>
 
 </LinearLayout>
