--- a/app/src/main/res/layout/details_category.xml
+++ b/app/src/main/res/layout/details_category.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Home_Fragment"
+    tools:context=".DetailsCategory_Activity"
     android:orientation="vertical"
     >
 
