--- a/app/src/main/res/layout/favorite_fragment.xml
+++ b/app/src/main/res/layout/favorite_fragment.xml
@@ -28,9 +28,12 @@
             android:src="@drawable/logo_masterchef" />
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:ems="20"
+            android:gravity="center"
+            android:paddingRight="40dp"
             android:text="Danh sách yêu thích"
             android:textColor="@color/white"
             android:textSize="25dp"
